styles/app.css
:root{
    --white: #fff;
    --gray300: #f0f0f0;
    --gray600: #535353;
}



body{
    font-family: Inter, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 16px;
    box-sizing: border-box;
}
.container {
    margin-right: auto;
    margin-left: auto;
    max-width: 450px;
}
    
header {
    background-image: url("/img/header-bg.jpg");
    height: 208px;
    background-repeat: no-repeat;
    background-size: cover;
    box-shadow: inset 0 0 0 1000px #121212b4;
    display: flex;
    justify-content: center;
    align-items: center;
}

header>div {
    width: 100%;
    color: var(--white);
    display: flex;
    justify-content: space-between;
    align-items: center;
 
    
    h1{
        font-size: 2rem;
        font-weight: bold;
    }
    

}

#search-box {
    display: flex;
    border: 1px solid var(--gray300);
    border-radius: 8px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: -20px;
    background-color: var(--white);
    
    
    input, button{
         padding-top:1em;
        padding-bottom:1em;
       
    }
    label{
       
        padding: 0.3em 0.5em;
    }
    
    input {
  
        border: none;
        flex-grow: 2;
        border-right: 2px solid var(--gray300);
      
    }
    
    button {
        border: none;
        flex-grow: 1;
        border-top-right-radius: 8px;
        border-bottom-right-radius: 8px;
        cursor: pointer;
    }
    button:hover {
        background-color: var(--gray600);
        color: var(--white);
    }
    
}

div#movies {
    margin-top: 1.5em;
}

.movie {
    display: flex;
    align-items: center;
    gap: 1em;
    
    #movie-name{
        display: flex;
        
        h2 {
            font-weight: 500;
            font-size: 1.3rem;
        }
        
        #rating{
            
            display: flex;
            justify-content: center;
            align-items:center;
            gap: 0.5em;
            font-size: 0.8rem;
            margin-left: 10px;
            
            /* alignment correction for the rating star */
            img {
                margin-top: -0.2em;
            }
        }
    }
    
    #movie-info {
        font-size: 0.7rem;
        font-weight: 400;
        margin: 1em 0;
        display: flex;
        justify-content: space-between;
        align-items: center;
        color: var(--gray600);
        
        #watchlist-icon{
            display: flex;
            align-items: center;
            gap: 0.5em;
            justify-content: center;
        }
    }
    
    #movie-summary {
        p {
            font-size: 0.9em;
            line-height: 1.2;
            color: var(--gray600);
            font-weight: 300;
        }
    }
}

